# multi-agent-eval

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/assets/: architecture.html
src/maeval/: __init__.py  agents.py  config.py  harness.py  quality.py
tasks/: tasks.yaml
tests/: test_maeval.py
