[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maeval"
version = "0.1.0"
description = "Does multi-agent beat single-agent? A benchmark measuring the quality/cost/latency trade-off of a planner→workers→critic system vs a single-agent baseline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["multi-agent", "llm-agents", "agent-evaluation", "orchestration", "claude", "anthropic", "cost-analysis"]
authors = [{ name = "Taimoor Karim" }]

dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]
all = ["maeval[claude,dev]"]

[project.scripts]
maeval = "maeval.harness:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maeval"]
